| Bug #30877 | Trailing event cannot be removed, hence replication cannot be set up | ||
|---|---|---|---|
| Submitted: | 6 Sep 2007 21:55 | Modified: | 7 Jan 2008 12:28 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | Any |
| Assigned to: | Tomas Ulin | Target Version: | |
| Triage: | D2 (Serious) | ||
[6 Sep 2007 21:55]
Tomas Ulin
[6 Sep 2007 21:57]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/33862 ChangeSet@1.2604, 2007-09-06 22:05:46+02:00, tomas@whalegate.ndb.mysql.com +6 -0 Bug #30877 cluster: trailing event cannot be removed, and hence replication cannot be setup
[20 Sep 2007 16:22]
Jon Stephens
Documented in mysql-5.1.22-ndb-6.2.6 and mysql-5.1.22-ndb-6.3.2 changelogs, left in PP status for 5.1-main push.
[7 Jan 2008 12:28]
Jon Stephens
Closed w/o further action per comment from Tomas.
[7 Jan 2008 12:29]
Jon Stephens
Closed w/o further action per comment from Tomas.
