Bug #30877  	cluster: trailing event cannot be removed, and hence replication cannot be setup